More styling for pages, all are at least done, issues are on mobile now.

--- a/Oodle/Oodle/Content/Site.css
+++ b/Oodle/Oodle/Content/Site.css
@@ -290,6 +290,37 @@ hr.style-four {
 }
 
 
+.dateLeft {
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    text-align: left;
+    padding-left: 10px;
+    color: #17252A;
+    font-size: small;
+    height: 10px;
+}
+
+
+.dateRight {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    text-align: right;
+    padding-right: 10px;
+    color: #17252A;
+    font-size: small;
+    height: 10px;
+}
+
+
+/*-----------------------------PENDING PAGE-----------------------------*/
+#pendingPage {
+    color: #17252A;
+    font-family: 'Ubuntu', sans-serif;
+}
+
+
 /*-----------------------------CREATE A CLASS PAGE-----------------------------*/
 #classCreateTitle {
     padding:1px;
@@ -371,13 +402,7 @@ hr.style-four {
             background: #3AAFA9;
         }
 
-/*       
-Black-ish: #17252A
-Darker blue: #2B7A78
-Lighter blue: #3AAFA9
-Darker white: #DEF2F1
-Lighter white: #FEFFFF
-     */
+
 /*-----------------------------TOOLS PAGE-----------------------------*/
 
 
@@ -528,18 +553,43 @@ Lighter white: #FEFFFF
 
 
 
+
+
+/*-----------------------------Submissions Table-----------------------------*/
+
+/*       
+Black-ish: #17252A
+Darker blue: #2B7A78
+Lighter blue: #3AAFA9
+Darker white: #DEF2F1
+Lighter white: #FEFFFF
+     */
+
+table {
+    border: 3px solid #17252A;
+    border-collapse: collapse;
+    background-color: #DEF2F1;
+}
+
+    table th {
+        background-color: #3AAFA9;
+        color: #FEFFFF;
+        font-weight: bold;
+    }
+
+    table th, table td {
+        padding: 18px;
+        border: 3px solid #17252A;
+    }
+
+    table, table table td {
+        border: 15px solid #17252A;
+    }
+
 /*-----------------------------UNSURE WHAT THESE DO-----------------------------*/
 
-.dateLeft {
-    position: absolute;
-    bottom: 10px;
-    left: 10px;
-    text-align: left;
-    padding-left: 10px;
-    color: dimgrey;
-    font-size: small;
-    height: 10px;
-}
+
+
 
 .edit {
     position: absolute;
@@ -560,17 +610,6 @@ Lighter white: #FEFFFF
     padding-left: 10px;
     color: black;
     font-size: medium;
-    height: 10px;
-}
-
-.dateRight {
-    position: absolute;
-    bottom: 10px;
-    right: 10px;
-    text-align: right;
-    padding-right: 10px;
-    color: dimgrey;
-    font-size: small;
     height: 10px;
 }
 
